src/components/Modeling/Result/styles.module.css
/* ... */
.title span {
    font-size: 1.25rem;
}

.text {
    display: flex;
}

.row {
    display: flex;
    margin-top: 0.15em;
}

.row span {
    display: block;
    color: #000;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.status {
    display: flex;
    font-size: 1.5rem;
    color: #f5a623;
    font-weight: bold;
}

.line {
    border-bottom: 3px solid #c4cbd7;
    margin: 0.2em 0;
    display: flex;
}

.selectBlock {
    display: flex;
    flex: none;
    margin-bottom: 0.2em;
}

.buttonBlock {
    display: flex;
    margin-top: 0.3em;
    margin-bottom: 0.6em;
    align-items: baseline;
}

.button {
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
    background-image: linear-gradient(to bottom, #5b657b, #243448);
    color: #fff;
    border: 0;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    cursor: pointer;
    padding: 0.1em 0.25em;
    margin-right: .25em;
}

.button span {
    font-size: 1rem;
    color: #fff;
    font-weight: normal;
}

.or {
    display: flex;
    margin: 0 0.25em;
}

.or span {
    font-size: 1.125rem;
    font-family: HelveticaNeue;
    color: #000;
}

.selectText {
    margin-right: 0.5em;
}

.radioGroup {
    display: flex;
    flex: none;
    flex-direction: column;
    position: relative;
    padding-right: 0.15em;
}

.radio {
    display: flex;
    align-items: center;
    margin: 5px 0;
}

.radio label {
    font-size: 1.125rem;
    color: #000;
    font-family: SanFranciscoText;
    cursor: pointer;
}

.radio input {
    width: 0.16em;
    height: 0.16em;
    margin-right: 0.1em;
    cursor: pointer;
}

.radio input:disabled + label {
    color: #ccc;
    cursor: not-allowed;
}

.radio input:disabled {
    cursor: not-allowed;
}

.performanceBox {
    display: flex;
    flex: 1 0;
    /* justify-content: center; */
}

.performance {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 0.2em;
    margin-top: 0.2em;
    justify-content: center;
}

.performance path:last-child {
    stroke: #ff8000;
}

.performance span{
    display: block;
}

span.performanceScore {
    font-size: 1.3rem;
    line-height: 1.4;
    color: #f5a623;
}

.performanceText {
    color: #000;
    margin-top: 0.15em;
    white-space: nowrap;
}

.progressBox {
    display: flex;
    flex-direction: column;
    margin-top: 0.25em;
    margin-left: 0.3em;
}

.progressBlock {
    margin-top: 0.05em;
}

.progressLine {
    display: flex;
}

.progress {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 80%;
    min-width: 20%;
}

.progressSmall {
    max-width: 87%;
    min-width: 13%;
}

.progress span {
    font-size: 1.125rem;
    font-weight: bold;
    color: #fff;
    line-height: 1.2;
}

.progressLarge {
    max-width: 100%;
}

.success {
    background-color: #9be44b;
}

.predicted {
    background-color: #adaafc;
}

.different {
    background-color: #f9cf37;
}

.progressTitle {
    margin-right: 0.1em;
    display: flex;
    flex: none;
    width: .5em;
}

.progressTitle span {
    font-size: 1.25rem;
    font-family: SanFranciscoText;
    color: #000;
    max-width: 100%;
    text-overflow: ellipsis;
    display: block;
    overflow: hidden;
}

.progressMeans {
    display: flex;
    margin-top: 0.2em;
}

.progressMean {
    display: flex;
    flex: auto;
    align-items: center;
    width: 0;
    justify-content: flex-start;
}

.progressMeanText {
    max-width: 65%;
    display: flex;
    flex: none;
    flex-direction: column;
}

.progressMeanText span {
    font-size: 0.875rem;
    color: #000;
    white-space: nowrap;
    max-width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;
    display: block;
}

.progressBlock {
    display: flex;
    align-items: center;
}

.progressSquare {
    width: 0.16em;
    height: 0.16em;
    margin: 0 0.15em;
}

.table {
    display: flex;
    flex-direction: column;
    flex: none;
    border: solid 0.5px #979797;
}

.rowData {
    display: flex;
    padding: 0 0.2em;
    position: relative;
    align-items: center;
    flex: none;
}

.rowBox {
    display: flex;
    flex-direction: column;
    flex: none;
}

.cell span {
    font-size: 0.875rem;
    text-overflow: clip;
    white-space: nowrap;
}

.rowHeader {
    padding: 0.2em 0;
    border-bottom: solid 1px #9b9b9b;
}

.data {
    display: flex;
    flex-direction: column;
    padding: 0.2em 0;
    overflow: auto;
    max-height: 5em;
}

.cell {
    display: flex;
    flex: auto;
    justify-content: center;
    align-items: center;
    padding: 0.08em 0;
    border-bottom: 1px solid #979797;
    min-width: 1.4em;
    margin: 0 0.05em;
    position: relative;
}

.cell .progress span {
    font-size: 0.75rem;
    color: #000;
    font-weight: normal;
}

.cellHeader {
    border: none;
}

.name {
    width: 2.3em;
    flex: none;
}

.name span {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    max-width: 100%;
    display: block;
}

.predict {
    width: 3.1em;
    border: none;
}

.space {
    margin-left: 0.1em;
}

.compute {
    border: none;
    cursor: pointer;
}

.compute span {
    color: #448eed;
    text-decoration: underline;
}

.compute img{
  margin-right: 10px;
}

.modelSelect {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    left: 0.05em;
}

.rmsePerformance, .r2Performance {
    display: flex
}

.rmsePerformance span {
    font-size: 2.2rem;
    color: #adaafc;
}

.r2Performance span {
    font-size: 2.2rem;
    color: #9be44b;
}

.center {
    display: flex;
    flex: none;
    justify-content: center;
    margin-top: 0.1em;
}

.detail {
    display: flex;
    flex-direction: column;
    padding: 0.1em 0;
    max-height: 200px;
    overflow-y: auto;
    overflow-x: hidden;
}

.detailNone {
    display: flex;
    flex: none;
    justify-content: center;
}
/* ... */

